Fix navbar align

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,9 +73,9 @@
 }
 
 .align-items-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
 }
 
 .margin-top {
